--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,9 +136,10 @@ h2 {
 /* media queries */
 
 @media only screen and (max-width: 800px) {
-  body {
+  /* body {
     min-height: 100vh;
-  }
+    overflow: hidden;
+  } */
   .top {
     margin-top: 3rem;
     flex-direction: column;
